# datafusion-c

./: .editorconfig  .gitignore  .gitmodules  .prettierignore  Brewfile  Cargo.toml  Gemfile  README.md  build.py  cbindgen.toml  datafusion-config.cmake.in  datafusion-glib-config.cmake.in  index.html  meson.build  meson_options.txt  requirements.txt  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  doc.yaml  package.yaml
10.0.0/: index.html  install.html  introduction.html  raw-c-api.html  search.html
10.0.0/_sources/: index.rst.txt  install.rst.txt
10.0.0/developer/: release.html
10.0.0/glib/: class.DataFrame.html  class.ParquetReadOptions.html  class.SessionContext.html  const.VERSION_MICRO.html  ctor.SessionContext.new.html  error.Error.html  func.DEPRECATED_FOR.html  func.UNAVAILABLE.html  index.html  index.json  method.CSVReadOptions.get_table_partition_columns.html  method.ParquetReadOptions.set_file_extension.html  method.ParquetReadOptions.set_table_partition_columns.html  method.SessionContext.deregister.html  method.SessionContext.register_csv.html  method.SessionContext.register_parquet.html  property.CSVReadOptions.delimiter.html  property.CSVReadOptions.has-header.html  property.DataFrame.data-frame.html
21.0.0/: .buildinfo  developer.html  genindex.html  glib-api.html  index.html  install.html  introduction.html  news.html  objects.inv  raw-c-api.html  search.html
21.0.0/_static/: documentation_options.js  switcher.json
21.0.0/developer/: release.html
21.0.0/example/: sql.html
21.0.0/glib/: class.CSVReadOptions.html  class.DataFrame.html  class.SessionContext.html  classes_hierarchy.html  const.VERSION_MAJOR.html  const.VERSION_MICRO.html  const.VERSION_MINOR.html  ctor.CSVReadOptions.new.html  ctor.ParquetReadOptions.new.html  ctor.ParquetWriterProperties.new.html  ctor.SessionContext.new.html  error.Error.html  func.DEPRECATED_FOR.html  func.DEPRECATED_IN_10_0_FOR.html  func.DEPRECATED_IN_21_0_FOR.html  func.UNAVAILABLE.html  func.VERSION_CHECK.html  index.html  method.CSVReadOptions.get_file_extension.html  method.CSVReadOptions.get_schema.html  method.CSVReadOptions.get_table_partition_columns.html  method.CSVReadOptions.set_file_extension.html  method.CSVReadOptions.set_schema.html  method.DataFrame.show.html  method.DataFrame.to_table.html  method.ParquetReadOptions.get_file_extension.html  method.ParquetReadOptions.get_table_partition_columns.html  method.ParquetReadOptions.is_set_pruning.html  method.ParquetReadOptions.set_file_extension.html  method.ParquetReadOptions.unset_pruning.html  method.SessionContext.deregister.html  method.SessionContext.register_csv.html  method.SessionContext.register_parquet.html  method.SessionContext.register_record_batch.html  method.SessionContext.register_table.html  method.SessionContext.sql.html  property.CSVReadOptions.delimiter.html  property.CSVReadOptions.schema-infer-max-n-records.html  property.DataFrame.data-frame.html  property.ParquetReadOptions.pruning.html  (+2 more)
21.0.0/news/: 10.0.0.html
cpp/: CMakeLists.txt
datafusion-glib/: .gitignore  csv-read-options-raw.h  csv-read-options.c  csv-read-options.h  data-frame-raw.h  data-frame.c  data-frame.h  datafusion-glib-raw.h  datafusion-glib.h  enums.c.template  error.c  error.h  meson.build  parquet-read-options-raw.h  parquet-read-options.c  parquet-read-options.h  session-context-raw.h  session-context.c  session-context.h  version.h.in
dev/release/: README.md  prepare.sh  rat_exclude_files.txt  tag.sh  verify-packages.sh
doc/: Doxyfile  Doxyfile.in  Makefile  build.py  meson.build
doc/datafusion-glib/: datafusion-glib-docs.xml  entities.xml.in  meson.build
doc/glib/: datafusion-glib-docs.xml  gi-docgen.toml.in  meson.build
doc/source/: conf.py  glib-api.rst  introduction.rst  news.rst
doc/source/developer/: release.rst
doc/source/news/: 10.0.0.md
example/: meson.build  sql-glib.c  sql-glib.py  sql-glib.rb  sql-glib.vala  sql.c  sql.py  sql.rb  sql.vala
examples/: meson.build  sql.go  sql.py  sql.rb  sql.vala
include/: datafusion.h
latest/: .buildinfo  developer.html  genindex.html  glib-api.html  news.html  objects.inv  searchindex.js
latest/_sources/: developer.rst.txt  news.rst.txt
latest/example/: sql.html
latest/glib/: class.CSVReadOptions.html  ctor.ParquetReadOptions.new.html  method.CSVReadOptions.get_file_extension.html  method.CSVReadOptions.get_schema.html  method.CSVReadOptions.set_schema.html  method.CSVReadOptions.set_table_partition_columns.html  method.DataFrame.show.html  method.DataFrame.write_parquet.html  method.ParquetReadOptions.get_file_extension.html  method.ParquetReadOptions.get_table_partition_columns.html  method.SessionContext.register_record_batch.html  method.SessionContext.sql.html  property.ParquetReadOptions.pruning.html  type_func.Error.quark.html
latest/news/: 10.0.0.html  21.0.0.html
main/: .buildinfo  developer.html  genindex.html  glib-api.html  index.html  install.html  introduction.html  news.html  objects.inv  raw-c-api.html  search.html  searchindex.js
main/_sources/: index.rst.txt  raw-c-api.rst.txt
main/_static/: documentation_options.js
main/developer/: release.html
main/example/: sql.html
main/glib/: class.CSVReadOptions.html  class.DataFrame.html  class.ParquetReadOptions.html  class.ParquetWriterProperties.html  class.SessionContext.html  classes_hierarchy.html  const.VERSION_MAJOR.html  const.VERSION_MICRO.html  const.VERSION_MINOR.html  ctor.CSVReadOptions.new.html  ctor.ParquetReadOptions.new.html  ctor.ParquetWriterProperties.new.html  ctor.SessionContext.new.html  error.Error.html  func.DEPRECATED_FOR.html  func.DEPRECATED_IN_10_0_FOR.html  func.DEPRECATED_IN_21_0_FOR.html  func.UNAVAILABLE.html  func.VERSION_CHECK.html  index.html  index.json  method.CSVReadOptions.get_file_extension.html  method.CSVReadOptions.get_schema.html  (+27 more)
package/: Rakefile
src/: capi.rs  lib.rs
test/: helper.rb  run.rb  run.sh  test-csv-read-options.rb  test-data-frame.rb  test-error.rb  test-parquet-read-options.rb  test-session-context.rb
(+39 files in other folders)
