# Copyright 2022-2023 Sutou Kouhei <kou@clear-code.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "datafusion-c"
description = "DataFusion C API"
version = "21.0.0"
homepage = "https://github.com/datafusion-contrib/datafusion-c"
repository = "https://github.com/datafusion-contrib/datafusion-c"
readme = "README.md"
authors = ["Sutou Kouhei <kou@clear-code.com>"]
license = "Apache-2.0"
keywords = ["arrow", "c"]
edition = "2021"
rust-version = "1.64"
exclude = [
  "/cpp/",
]

[lib]
crate-type = ["cdylib"]
name = "datafusion"

[features]
default = ["capi"]
capi = []

[dependencies]
arrow = { version = "34", features = ["ffi", "prettyprint"] }
arrow-data = "34"
datafusion = "21"
libc = "0.2"
parquet = { version = "34", features = ["arrow", "async"] }
tokio = "1"

[package.metadata.capi.header]
subdirectory = false
